# mcp-audit

./: .gitignore  CHANGELOG.md  LAUNCH.md  README.md  RELEASE.md  action.yml  dev-to-post.md  publish.sh  pyproject.toml  x-thread.md
.github/workflows/: ci.yml
examples/: good.mcp.json  insecure.mcp.json
mcp_audit/: __init__.py  audit.py  cli.py  report.py
tests/: test_audit.py
